Updated index file

--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
 <p><i class="fas fa-phone"></i> <a href="tel:+919839228021">+91 98392 28021</a></p>
 <p><i class="fas fa-map-marker-alt"></i> Raniganj, Amethi, UP</p>
 <div class="social-icons">
-<a href="#"><i class="fab fa-facebook"></i></a>
-<a href="#"><i class="fab fa-instagram"></i></a>
-<a href="https://wa.me/919839228021"><i class="fab fa-whatsapp"></i></a>
+<a href="https://www.facebook.com/sanjay.tripathi.165033" target="_blank" rel="noopener noreferrer" aria-label="Visit Facebook"><i class="fab fa-facebook"></i></a>
+<a href="https://www.instagram.com/sanjay.tripathi.165033/?utm_source=ig_web_button_share_sheet" target="_blank" rel="noopener noreferrer" aria-label="Visit Instagram"><i class="fab fa-instagram"></i></a>
+<a href="https://wa.me/919839228021" target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp"><i class="fab fa-whatsapp"></i></a>
 </div>
 </div>
 </div>
