--- a/index.html
+++ b/index.html
@@ -225,13 +225,42 @@
 <p><i class="fas fa-phone"></i> <a href="tel:+919839228021">+91 98392 28021</a></p>
 <p><i class="fab fa-whatsapp"></i> WhatsApp: +91 98392 28021</p>
 </div>
-<form class="contact-form reveal" id="contactForm">
-<input type="text" id="name" placeholder="Your Name" required>
-<input type="tel" id="phone" placeholder="Phone Number" required pattern="[0-9]{10,12}">
-<textarea id="message" rows="4" placeholder="Your message" required></textarea>
-<button type="submit" class="btn btn-gold"><i class="fas fa-paper-plane"></i> Send Message</button>
-<p id="form-feedback" class="form-feedback"></p>
+<form class="contact-form reveal"
+      action="https://formspree.io/f/xnjbzzpa"
+      method="POST">
+
+  <input type="text"
+         name="name"
+         placeholder="Your Name"
+         required>
+
+  <input type="tel"
+         name="phone"
+         placeholder="Phone Number"
+         required
+         pattern="[0-9]{10,12}">
+
+  <textarea name="message"
+            rows="4"
+            placeholder="Your Message"
+            required></textarea>
+
+  <button type="submit" class="btn btn-gold">
+    <i class="fas fa-paper-plane"></i> Send Message
+  </button>
+
+  <!-- Email Subject -->
+  <input type="hidden"
+         name="_subject"
+         value="New Message from Bajrang General Store Website">
+
+  <!-- Disable Formspree Captcha (optional) -->
+  <input type="hidden"
+         name="_captcha"
+         value="false">
+
 </form>
+
 </div>
 </div>
 </section>
